# Recipe-Builder-API

./: README.md  db.sqlite3  pyproject.toml  requirements.txt
.github/workflows/: main_recipe-builder-api.yml
images/: models.py  services.py  urls.py  views.py
images/migrations/: 0001_initial.py
mealplans/: models.py  serializers.py  services.py  urls.py  views.py
mealplans/migrations/: 0001_initial.py  0002_alter_mealplanrecipe_meal_type.py  0003_remove_mealplanrecipe_meal_type.py
recipebuilder/: settings.py  urls.py
recipes/: models.py  serializers.py  services.py  urls.py  views.py
recipes/migrations/: 0001_initial.py  0002_remove_ingredient_image_remove_recipe_image_and_more.py  0003_recipe_is_deleted.py  0004_ingredient_is_deleted.py  0005_recipeingredient_is_deleted.py  0006_remove_recipe_image_path_recipe_image.py  0007_remove_ingredient_image_path_ingredient_image.py
users/: dtos.py  models.py  serializers.py  services.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_profile_profile_picture.py
